Safari Bugs Fixed, Hidden Svgs + Distorted Font Weights

--- a/components/ContactUsSection/ContactUsSection.module.css
+++ b/components/ContactUsSection/ContactUsSection.module.css
@@ -63,7 +63,7 @@
 }
 
 .openingHoursTable th {
-  font-weight: var(--font-weight-semi-bold);
+  font-weight: var(--font-weight-medium);
 
 }
 
