--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -35,6 +35,7 @@
 .footerBodyText {
   font-size: var(--body-small-font-size);
   color: var(--accent-color);
+  
 }
 
 /* Column 1 */
@@ -76,7 +77,7 @@
 }
 
 .openingHoursTable th {
-  font-weight: var(--font-weight-semi-bold);
+  font-weight: var(--font-weight-medium);
   width: 50%;
   color: var(--accent-color);
 }
@@ -85,6 +86,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--heading-gap);
+  
 }
 
 .shopAddress {
@@ -134,6 +136,7 @@
   gap: var(--s-gap);
   color: var(--accent-color);
   font-size: var(--body-small-font-size);
+  
 
 }
 
