--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -26,6 +26,7 @@
     justify-self: start;
     display: flex;
     padding: var(--s-padding);
+    height: 100%;
 }
 
 .homepageLogoLink :hover {
