--- a/components/SeasonalSection/SeasonalSection.module.css
+++ b/components/SeasonalSection/SeasonalSection.module.css
@@ -7,6 +7,8 @@
     grid-column: 2 / 4;
     align-self: center; 
     justify-self: center;
+    width: 100%;
+    height: 100%;
     
 }
 
@@ -15,6 +17,7 @@
     grid-column: 2 / 4;
     align-self: center;
     width: 60%;
+    height: 100%;
     justify-self: center;
     
 }
